# nod3-comfirm

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.cpp
main/ext/adc_periodic/: CMakeLists.txt  adc_periodic.cpp  adc_periodic.h
main/ext/analogue_in/: CMakeLists.txt  analogue_in.cpp  analogue_in.h
main/ext/as5600/: CMakeLists.txt  as5600.cpp  as5600.h
main/ext/bmx280/: CMakeLists.txt  bmx280.c  bmx280_bits.h
main/ext/ccs811/: CMakeLists.txt  README.md  ccs811.cpp  ccs811.h
main/ext/cron_scheduler/: CMakeLists.txt  cron_scheduler.cpp  cron_scheduler.h
main/ext/digio_manager/: CMakeLists.txt  digio.cpp  digio.h
main/ext/ds18b20/: CMakeLists.txt  ds18b20.h
main/ext/ha_websocket/: CMakeLists.txt  ha_websocket.cpp  ha_websocket.h
main/ext/http_server/: CMakeLists.txt  http_server.cpp  http_server.h
main/ext/hx711/: CMakeLists.txt  hx711.h
main/ext/led_ws2812b/: CMakeLists.txt  led_ws2812b.cpp  led_ws2812b.h
main/ext/mcu_info/: CMakeLists.txt  mcu_info.cpp  mcu_info.h  save_backtrace.h
main/ext/network_manager/: CMakeLists.txt  network_manager.cpp  network_manager.h
main/ext/ntp_time/: CMakeLists.txt  ntp_time.cpp  ntp_time.h
main/ext/nvs_manager/: CMakeLists.txt  nvs_manager.h
main/ext/sleep_manager/: CMakeLists.txt  sleep_manager.cpp  sleep_manager.h
main/ext/sound_in_fft/: CMakeLists.txt  sound_in_fft.cpp  sound_in_fft.h
main/ext/utils/: report_builder.h  save_backtrace.h
main/lib/: main.h
